--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
 			<button id="enter" class="control-button">PROČITAJ</button>
 		</div>
 		<script src="https://code.responsivevoice.org/responsivevoice.js?key=TNIkWCZp"></script>
-		<script>
-			responsiveVoice.speak("Preimućstvo", "Serbian Male");
-		</script>
-		<div id="langList"></div>
+		<div id="langList" hidden></div>
 		<script src="script.js"></script>
 	</body>
 </html>
